--- a/restaurant/css/styles.css
+++ b/restaurant/css/styles.css
@@ -3,7 +3,7 @@
 }
 
 body{
-	background-color: #fefbd8;
+	background-color: white;
 	color: white;
 	font-family: 'Andika New Basic', sans-serif;
 	font-size: 16px;
